ocp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattias-lernia-app
  annotations:
    image.openshift.io/triggers: '[{
      "from": {
        "kind": "ImageStreamTag",
        "name": "mattias-lernia-app:main"
      },
      "fieldPath": "spec.template.spec.containers[?(@.name==\"mattias-lernia-app\")].image"
    }]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattias-lernia-app
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: mattias-lernia-app
    spec:
      containers:
      - name: mattias-lernia-app
        image: mattias-lernia-app:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
